@@ -1,3 +1,7 @@
+2023-08-16  Charlie Zender  <zender@uci.edu>
+
+	* nco_grd_nfr() test MPAS coordinates without units attributes for being radians not degrees
+
 2023-08-15  Charlie Zender  <zender@uci.edu>
 
 	* Remove WARNING statements about NC_STRING not being supported/CF-compliant
